# null-claude4

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GUIDE.md  LICENSE  Makefile  README.md  life.py  pyproject.toml
.ralph/: round-001-thinker.json  round-001-worker.json  round-002-thinker.json  round-002-worker.json  round-003-thinker.json  round-003-worker.json  round-004-thinker.json  round-004-worker.json  round-005-thinker.json  round-005-worker.json  round-006-thinker.json  round-006-worker.json  round-007-thinker.json  round-007-worker.json  round-008-thinker.json  round-008-worker.json  round-009-thinker.json  round-009-worker.json  round-010-thinker.json  round-010-worker.json  round-011-thinker.json  round-011-worker.json  round-012-thinker.json  round-012-worker.json  round-013-thinker.json  round-013-worker.json  round-014-thinker.json  round-014-worker.json  round-015-thinker.json  round-015-worker.json  round-016-thinker.json  round-016-worker.json  round-017-thinker.json  round-017-worker.json  round-018-thinker.json  round-018-worker.json  round-019-thinker.json  round-019-worker.json  round-020-thinker.json  round-020-worker.json  (+26 more)
